# alea-js

./: Cargo.toml  README.md
benches/: benchmark_fast.rs  benchmark_rand.rs
src/: lib.rs
