[package]
name = "alea-js"
version = "0.1.0"
authors = ["freyhoe"]
edition = "2021"
description = "Rust port of the javascript alea rng"
readme = "README.md"
categories = ["algorithms"]
keywords = ["random", "prng"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark_rand"
harness = false

[[bench]]
name = "benchmark_fast"
harness = false